--- a/public/stylesheets/partials.css
+++ b/public/stylesheets/partials.css
@@ -5,28 +5,32 @@
     font-optical-sizing: auto;
     font-style: normal;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     max-width: 100vw;
     padding: 10px 20px;
+    margin: 0px 45px 0px 45px;
     justify-content: space-between;
     align-items: center;
+    font-size: 20px;
 }
 
 .nav-links {
+    font-size: 15px;
     background-color: aliceblue;
     display: flex; 
     justify-content: space-between;
-    gap: 400px; 
-    padding: 5px;
+    padding: 10px 20px;
+    gap: 300px
 }
 
 a:link, a:visited {
     color: black; 
     text-decoration: none; 
-    
   }
 
 a:hover {
     color: blue;
+    cursor: pointer;
+    
 }
 
