--- a/views/deals/index.ejs
+++ b/views/deals/index.ejs
@@ -1,35 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/stylesheets/style.css" />
     <title>My Deals</title>
-  </head>
-  <body>
+</head>
+
+<body>
     <%- include('../partials/_navbar.ejs') %>
-    <div class="my-deals-parent">
-      <div id="my-deals-child">
-        <p>My Deals</p>
-      </div>
-    </div>
-    <div class="add-deal-nav">
-      <div class="add-deal-parent">
-        <div id="add-deal-child">
-          <a href="/deal/new">Add a New Deal</a>
+        <div class="my-deals-parent">
+            <div id="my-deals-child">
+                <p>My Deals</p>
+            </div>
         </div>
-      </div>
-    </div>
-    <main>
-      <% deals.forEach((deal) => { %>
-        <article class="card"></article>
-        <div class="img-placeholder"><img src="<%= deal.image %>" alt="<%= deal.name %>"></div>
-        <div class="card-footer">
-        <a href="/deal/<%= deal._id %>">
-          <%= deal.name %> -------- <%=deal.loanAmount%></a>
+        <div class="add-deal-nav">
+            <a href="/deal/new">
+                <div class="add-deal-parent">
+                    <div id="add-deal-child">
+                        Add a New Deal
+                    </div>
+                </div>
+            </a>
         </div>
-      <% }) %>
-    </article>
-    </main>
-  </body>
+        <main>
+            <% deals.forEach((deal)=> { %>
+                <a href="/deal/<%= deal._id %>">
+                    <article class="card">
+                        <div>
+                            <div class="deal-information" id="deal-name">
+                                <h1>
+                                    <%= deal.name %>
+                                </h1>
+                            </div>
+                            <div class="deal-information" id="deal-developer">Developer / Owner: <%=deal.developer%>
+                            </div>
+                        <div class="deal-information" id="deal-amount">Loan Ask: <%=deal.loanAmount%>
+                        </div>
+                        </div>
+                        <div class="deal-image">
+                            <img src="<%= deal.image %>" alt="<%= deal.name %>">
+                        </div>
+                    </article>
+                </a>
+                <% }) %>
+        </main>
+</body>
+
 </html>
