--- a/public/stylesheets/partials.css
+++ b/public/stylesheets/partials.css
@@ -7,24 +7,28 @@
     display: flex;
     flex-direction: row;
     max-width: 100vw;
-    padding: 10px 20px;
+    padding: 0px 20px 0px 20px;
     margin: 0px 45px 0px 45px;
     justify-content: space-between;
     align-items: center;
     font-size: 20px;
+    font-weight: bold;
+    border-radius: 10px;
+    font: rgba(2, 6, 35, 0.927);;
+    border: 1px solid black;
 }
 
 .nav-links {
-    font-size: 15px;
-    background-color: aliceblue;
+    font-size: 20px;
     display: flex; 
+    align-content: center;
     justify-content: space-between;
     padding: 10px 20px;
-    gap: 300px
+    gap: 300px;
 }
 
 a:link, a:visited {
-    color: black; 
+    color: rgba(5, 10, 55, 0.927); 
     text-decoration: none; 
   }
 
