--- a/views/auth/sign-in.ejs
+++ b/views/auth/sign-in.ejs
@@ -1,18 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sign In</title>
-</head>
-<body>
-  <h1>Sign in</h1>
-  <form action="/auth/sign-in" method="POST">
-    <label for="username">Username:</label>
-    <input type="text" name="username" id="username" required />
-    <label for="password">Password:</label>
-    <input type="password" name="password" id="password" required />
-    <button type="submit">Sign in</button>
-  </form>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/stylesheets/auth.css" />
+    <title>Sign In</title>
+  </head>
+  <body>
+    <main>
+      <div class="main-container">
+        <div class="welcome-message">
+          <p>Sign in</p>
+        </div>
+        <div class="sign-in">
+          <form action="/auth/sign-in" method="POST">
+            <div>
+              <label for="username"></label>
+              <input placeholder="Username" type="text" name="username" id="username" required />
+            </div>
+            <div>
+            <label for="password"></label>
+            <input placeholder="Password" type="password" name="password" id="password" required />
+            </div>
+            <div>
+              <button type="submit">Sign in</button>
+            </div>
+          </form>
+          <div class="sign-up-button">
+            <form action="/auth/sign-up">
+                <button type="submit">Sign Up</button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </main>
+  </body>
 </html>
