--- a/views/auth/sign-up.ejs
+++ b/views/auth/sign-up.ejs
@@ -1,25 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Sign Up</title>
-</head>
-<body>
-  <h1>Create a new account!</h1>
-  <form action="/auth/sign-up" method="POST">
-    <label for="username">Username:</label>
-    <input type="text" name="username" id="username" required />
-    <label for="password">Password:</label>
-    <input type="password" name="password" id="password" required />
-    <label for="confirmPassword">Confirm Password:</label>
-    <input 
-      type="password"
-      name="confirmPassword"
-      id="confirmPassword"
-      required 
-    />
-    <button type="submit">Sign up</button>
-  </form>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/stylesheets/auth.css" />
+    <title>Sign Up</title>
+  </head>
+  <body>
+    <main>
+      <div class="main-container">
+        <div class="welcome-message">
+          <p>Create a New Account</p>
+        </div>
+        <div class="sign-up">
+          <form action="/auth/sign-up" method="POST">
+            <div>
+              <label for="username">Username:</label>
+              <input type="text" name="username" id="username" required />
+            </div>
+            <div>
+              <label for="password">Password:</label>
+              <input type="password" name="password" id="password" required />
+            </div>
+            <div>
+              <label for="confirmPassword">Confirm Password:</label>
+              <input
+                type="password"
+                name="confirmPassword"
+                id="confirmPassword"
+                required
+              />
+            </div>
+            <button type="submit">Sign up</button>
+          </form>
+          <div class="sign-in-button">
+            <form action="/auth/sign-in">
+                <button type="submit">Sign In</button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </main>
+  </body>
 </html>
