--- a/views/deals/new.ejs
+++ b/views/deals/new.ejs
@@ -3,28 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/stylesheets/style.css" />
-    <title>Document</title>
+    <link rel="stylesheet" href="/stylesheets/show.css" />
+    <title>Create A New Deal</title>
 </head>
 <body>
     <%- include('../partials/_navbar.ejs') %>  
 <h1>Create A New Deal</h1>
 <form action="/deal" method="POST">
+<ul>
+    <li>
     <label for="name">Deal Name:</label>
     <input type="text" name="name" id="name" />
+</li>
 
+<li>
     <label for="address">Address:</label>
     <input type="text" name="address" id="address" />
+</li>
 
+<li>
+    <label for="assetType">Asset Type:</label>
+    <input type="text" name="assetType" id="assetType" />
+</li>
+
+<li>
     <label for="loanAmount">Loan Amount: </label>
     <input type="text" name="loanAmount" id="loanAmount" />
-
+</li>
+<li>
     <label for="stories">Stories: </label>
     <input type="number" name="stories" id="stories" />
-
+</li>
+<li>
     <label for="squareFeet">Building Square Feet: </label>
     <input type="string" name="squareFeet" id="squareFeet" />
-
+</li>
+<li>
     <label for="rateType">Rate Type:</label>
     <select name="rateType" id="rateType">
         <option value="Fixed">Fixed</option>
@@ -35,13 +49,16 @@
         <option value="Floating Rate (10-YR Treasury)">Floating Rate (10-YR Treasury)</option>
         <option value="Unknown">Unknown</option>
     </select>
-
+</li>
+<li>
     <label for="minRate">Minimum Interest Rate (%): </label>
     <input type="number" name="minRate" id="minRate" />
-
+</li>
+<li>
     <label for="maxRate">Maximum Interest Rate (%): </label>
     <input type="number" name="maxRate" id="maxRate" />
-
+</li>
+<li>
     <label for="dealType">Deal Type: </label>
     <select name="dealType" id="dealType">
         <option value="Acquisition">Acquisition</option>
@@ -53,22 +70,27 @@
         <option value="Refinance">Refinance</option>
         <option value="TCO">TCO</option>
     </select>
-    
+</li>
+<li>
     <label for="recourse">Recourse: </label>
     <select name="recourse" id="recourse">
         <option value="Non-Recourse">Non-Recourse</option>
         <option value="Recourse">Recourse</option>
     </select>
-
+</li>
+<li>
     <label for="developer">Developer: </label>
     <input type="developer" name="developer" id="developer" />
-
+</li>
+<li>
     <label for="brokerCompany">Broker Company: </label>
     <input type="brokerCompany" name="brokerCompany" id="brokerCompany" />
-
+</li>
+<li>
     <label for="image">Upload Image (URL): </label>
     <input type="text" id="image" name="image" />
-
+</li>
+</ul>
     <button type="submit">Add Deal</button>
 
 </form>
