--- a/views/deals/show.ejs
+++ b/views/deals/show.ejs
@@ -3,31 +3,40 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/stylesheets/show.css" />
     <title><%= deal.name %></title>
   </head>
   <body>
     <%- include('../partials/_navbar.ejs') %>
+    <div class="main-container">
     <h1><%= deal.name %></h1>
-    <ul>
-    <li>Address: <%= deal.address %></li>
-    <li>Loan Amount: <%= deal.loanAmount %></li>
-    <li>Number of Stories: <%= deal.stories %></li>
-    <li>Square Feet: <%= deal.squareFeet %></li>
-    <li>Interest Rate Type: <%= deal.rateType %></li>
-    <li>Minimum Rate: <%= deal.minRate %>%</li>
-    <li>Maximum Rate: <%= deal.maxRate %>%</li>
-    <li>Deal Type: <%= deal.dealType %></li>
-    <li>Recourse: <%= deal.recourse %></li>
-    <li>Developer / Owner: <%= deal.developer %></li>
-    <li>Broker Company: <%= deal.brokerCompany %></li>
-    <img src="<%= deal.image %>" alt="<%= deal.name %>">
-    </ul>
-    
-    <form action="/deal/<%= deal._id%>/?_method=DELETE" method="POST">
-      <button type="submit">Delete Deal</button>
-    </form>
+    <div class="deal">
+      <div class="deal-picture">
+        <img src="<%= deal.image %>" alt="<%= deal.name %>" />
+      </div>
+      <div class="deal-information">
+        <ul>
+          <li>Address: <%= deal.address %></li>
+          <li>Asset Type: <%= deal.assetType %></li>
+          <li>Loan Amount: <%= deal.loanAmount %></li>
+          <li>Number of Stories: <%= deal.stories %></li>
+          <li>Square Feet: <%= deal.squareFeet %></li>
+          <li>Interest Rate Type: <%= deal.rateType %></li>
+          <li>Minimum Rate: <%= deal.minRate %>%</li>
+          <li>Maximum Rate: <%= deal.maxRate %>%</li>
+          <li>Deal Type: <%= deal.dealType %></li>
+          <li>Recourse: <%= deal.recourse %></li>
+          <li>Developer / Owner: <%= deal.developer %></li>
+          <li>Broker Company: <%= deal.brokerCompany %></li>
+        </ul>
+      </div>
+    </div>
     <form action="/deal/<%= deal._id%>/edit" method="GET">
         <button type="submit">Edit Deal</button>
       </form>
+    <form action="/deal/<%= deal._id%>/?_method=DELETE" method="POST">
+      <button type="submit">Delete Deal</button>
+    </form>
+</div>
   </body>
 </html>
