--- a/public/stylesheets/auth.css
+++ b/public/stylesheets/auth.css
@@ -1,87 +1,90 @@
-
 main {
-    background-image: url("https://www.holycowcanvas.com/cdn/shop/products/new-york-skyline-at-night-canvas-art-holycowcanvas_135.jpg?v=1591518605&width=1327");
-    display: flex;
-    justify-content: center;
-    font-family: "STIX Two Text", serif;
-    font-optical-sizing: auto;
-    font-style: normal;
-    
+  background-image: url("https://www.holycowcanvas.com/cdn/shop/products/new-york-skyline-at-night-canvas-art-holycowcanvas_135.jpg?v=1591518605&width=1327");
+  display: flex;
+  justify-content: center;
+  font-family: "STIX Two Text", serif;
+  font-optical-sizing: auto;
+  font-style: normal;
 }
 
 .main-container {
-    display: flex;
-    background-color: white;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    align-content: center;
-    margin: 200px;
-    height: 400px;
-    width: 500px;
+  display: flex;
+  background-color: white;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  align-content: center;
+  margin: 200px;
+  height: 400px;
+  width: 500px;
+}
+
+.home-page {
+  display: flex;
+  justify-content: center;
+  margin: 50px;
 }
 
 .welcome-message {
-    margin: 0px 0px 10px 0px;
-    font-size: 25px;
-    border-bottom: 1px solid black;
+  margin: 0px 0px 10px 0px;
+  font-size: 25px;
+  border-bottom: 1px solid black;
 }
 
 .sign-in {
-    display: flex;
-    flex-direction: column;
-    width: 200px;
-    height: 300px;
-    margin: 30px;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  width: 200px;
+  height: 300px;
+  margin: 30px;
+  justify-content: center;
+  align-items: center;
 }
 
 .sign-up {
-    display: flex;
-    flex-direction: column;
-    width: 200px;
-    height: 300px;
-    margin: 30px;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  width: 200px;
+  height: 300px;
+  margin: 30px;
+  justify-content: center;
+  align-items: center;
 }
 
 form {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    margin-bottom: 7px;
-  
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  margin-bottom: 7px;
 }
 input {
-    border: 1px solid black;
-    padding: 2px 0px 0px 10px;
-    font-size: 15px;
-    border-radius: 15px;
-    height: 30px;
-    width: 300px;
+  border: 1px solid black;
+  padding: 2px 0px 0px 10px;
+  font-size: 15px;
+  border-radius: 15px;
+  height: 30px;
+  width: 300px;
 }
 
 button {
-    height: 30px;
-    width: 310px;
-    border-radius: 15px;
-    font-weight: bold;
-    background-color: black;
-    color: white;
+  height: 30px;
+  width: 310px;
+  border-radius: 15px;
+  font-weight: bold;
+  background-color: black;
+  color: white;
 }
 button:hover {
-    color: blue;
-    cursor: pointer;  
+  color: blue;
+  cursor: pointer;
 }
 
-a:link, a:visited {
-    color: rgba(5, 10, 55, 0.927); 
-    text-decoration: none; 
-  }
+a:link,
+a:visited {
+  color: rgba(5, 10, 55, 0.927);
+  text-decoration: none;
+}
 a:hover {
-    color: blue;
-    cursor: pointer;
-    
+  color: blue;
+  cursor: pointer;
 }
