--- a/public/stylesheets/partials.css
+++ b/public/stylesheets/partials.css
@@ -1,40 +1,39 @@
-@import url('https://fonts.googleapis.com/css2?family=STIX+Two+Text:ital,wght@0,400..700;1,400..700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=STIX+Two+Text:ital,wght@0,400..700;1,400..700&display=swap");
 
 .navbar {
-    font-family: "STIX Two Text", serif;
-    font-optical-sizing: auto;
-    font-style: normal;
-    display: flex;
-    flex-direction: row;
-    max-width: 100vw;
-    padding: 0px 20px 0px 20px;
-    margin: 0px 45px 0px 45px;
-    justify-content: space-between;
-    align-items: center;
-    font-size: 20px;
-    font-weight: bold;
-    border-radius: 10px;
-    font: rgba(2, 6, 35, 0.927);;
-    border: 1px solid black;
+  font-family: "STIX Two Text", serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+  display: flex;
+  flex-direction: row;
+  max-width: 100vw;
+  padding: 0px 20px 0px 20px;
+  margin: 0px 45px 0px 45px;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 20px;
+  font-weight: bold;
+  border-radius: 10px;
+  font: rgba(2, 6, 35, 0.927);
+  border: 1px solid black;
 }
 
 .nav-links {
-    font-size: 20px;
-    display: flex; 
-    align-content: center;
-    justify-content: space-between;
-    padding: 10px 20px;
-    gap: 300px;
+  font-size: 20px;
+  display: flex;
+  align-content: center;
+  justify-content: space-between;
+  padding: 10px 20px;
+  gap: 300px;
 }
 
-a:link, a:visited {
-    color: rgba(5, 10, 55, 0.927); 
-    text-decoration: none; 
-  }
+a:link,
+a:visited {
+  color: rgba(5, 10, 55, 0.927);
+  text-decoration: none;
+}
 
 a:hover {
-    color: blue;
-    cursor: pointer;
-    
+  color: blue;
+  cursor: pointer;
 }
-
