--- a/public/stylesheets/show.css
+++ b/public/stylesheets/show.css
@@ -7,56 +7,73 @@ body {
   background: white;
 }
 
-
 .main-container {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 }
 
 .deal {
-    display: flex;
-    justify-content: center;
-    flex-direction: row;
-    gap: 20px;
-    align-items: center;
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+  gap: 20px;
+  align-items: flex-start;
 }
 
 .deal-picture img {
-    height: 400px;
-    width: 450px;
-    border-radius: 15px;
-    border: 1px solid black;
+  height: 400px;
+  width: 450px;
+  border-radius: 15px;
+  border: 1px solid black;
+}
+.deal-notes-container {
+  display: flex;
+  align-content: center;
+}
+.deal-notes {
+  width: 400px;
+  margin-left: 30px;
+  display: flex;
+  flex-direction: column;
 }
 
 ul {
-    list-style: none;
+  list-style: none;
 }
 
 ul li {
-    margin: 18px;
+  margin: 18px;
 }
 
 button {
-    height: 30px;
-    width: 600px;
-    border-radius: 15px;
-    font-weight: bold;
-    background-color: black;
-    color: white;
-    margin: 10px;
+  height: 30px;
+  width: 600px;
+  border-radius: 15px;
+  font-weight: bold;
+  background-color: black;
+  color: white;
+  margin: 10px;
 }
 button:hover {
-    color: blue;
-    cursor: pointer;  
+  color: blue;
+  cursor: pointer;
 }
 
-a:link, a:visited {
-    color: rgba(5, 10, 55, 0.927); 
-    text-decoration: none; 
-  }
+#delete-button {
+  background-color: red;
+}
+
+#save-button {
+  background-color: green;
+}
+
+a:link,
+a:visited {
+  color: rgba(5, 10, 55, 0.927);
+  text-decoration: none;
+}
 a:hover {
-    color: blue;
-    cursor: pointer;
-    
+  color: blue;
+  cursor: pointer;
 }
