--- a/views/auth/sign-in.ejs
+++ b/views/auth/sign-in.ejs
@@ -16,11 +16,23 @@
           <form action="/auth/sign-in" method="POST">
             <div>
               <label for="username"></label>
-              <input placeholder="Username" type="text" name="username" id="username" required />
+              <input
+                placeholder="Username"
+                type="text"
+                name="username"
+                id="username"
+                required
+              />
             </div>
             <div>
-            <label for="password"></label>
-            <input placeholder="Password" type="password" name="password" id="password" required />
+              <label for="password"></label>
+              <input
+                placeholder="Password"
+                type="password"
+                name="password"
+                id="password"
+                required
+              />
             </div>
             <div>
               <button type="submit">Sign in</button>
@@ -28,7 +40,7 @@
           </form>
           <div class="sign-up-button">
             <form action="/auth/sign-up">
-                <button type="submit">Sign Up</button>
+              <button type="submit">Sign Up</button>
             </form>
           </div>
         </div>
