--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,17 +9,19 @@
 
   <body>
     <% if (user) { %> <%- include('./partials/_navbar.ejs') %>
-    <h1>Welcome to the app, <%= user.username %>!</h1>
+    <div class="home-page">
+      <h1>Welcome to the app, <%= user.username %>!</h1>
+    </div>
     <% } else { %>
     <main>
       <div class="main-container">
         <div class="welcome-message">
-          <p>Welcome to the Real Estate Loans App. </p>
+          <p>Welcome to the Real Estate Loans App.</p>
           <p>The app to help organize your deal pipeline.</p>
         </div>
         <div>
-        <a href="/auth/sign-in">Sign in</a>  |
-        <a href="/auth/sign-up">Sign up</a>   
+          <a href="/auth/sign-in">Sign in</a> |
+          <a href="/auth/sign-up">Sign up</a>
         </div>
       </div>
     </main>
