--- a/public/stylesheets/auth.css
+++ b/public/stylesheets/auth.css
@@ -5,6 +5,7 @@ main {
   font-family: "STIX Two Text", serif;
   font-optical-sizing: auto;
   font-style: normal;
+  height: 100vh;
 }
 
 .main-container {
